= BinData Changelog

== Version 2.x.x (2014-xx-xx)

* Warn if String has :asserted_value but no :length.  Requested by Michael
  Genereux.

== Version 2.1.0 (2014-04-16)

* Performance improvements.
* Removed deprecated parameters.
* Code refactored to use Ruby 1.9 features.
* #eval_parameters can now call private methods.  Requested by Ole Rasmussen.
* Can now determine state of :onlyif fields.  Requested by Ole Rasmussen.
* Renamed #offset to #abs_offset for clarity.  #offset is now deprecated.
* Support :byte_align for fields in structs.  Requested by Igor Yamolov.
* Added bit fields with dynamic length.  Requested by Jacob Dam.
* Added "endian :big_and_little" option which creates :big and :little
  versions of the class.  Thanks to Jacob Lukas for the prototype.

== Version 2.0.0 (2014-02-02)

* Ruby 1.8 now has its own separate branch.
* Struct now uses symbols for field names instead of strings.
* Added signed bitfields.  Requested by redood.
* Virtual fields can now have names.
* Bug fixes.

== Version 1.8.0 (2014-01-06)

* Allow custom types to have endian, not just numerics.
* Added missing field to TCP example.  Thanks to Bertrand Paquet.
* Made tests compatible with JRuby.  Thanks to Charles Oliver Nutter.
* Support travis ci for those that use it.  Thanks to Charles Oliver Nutter.
* Added Buffer for easier handling of nested streams.
* Added Virtual field.

== Version 1.6.0 (2013-09-02)

* Added license to .gemspec
* Moved test suite from RSpec to Minitest.
* Added :assert and :asserted_value.
* :check_value has been deprecated. Use :assert instead.

== Version 1.5.1 (2013-08-16)

* Rework build system and include .gemspec.  Requested by Simon Shortman.
* Fixed bug when Choice#clear didn't clear everything.  Thanks to Simon
  Shortman for the bug report.
* Moved BinData::VERSION into its own file.  Thanks to John Van Enk.

== Version 1.5.0 (2013-05-21)

* Moved to github.
* Updated to Ruby 2.0